--- a/associate/src/main/resources/application.yaml
+++ b/associate/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: ms-party
+    name: ms-associate
   sql.init.mode: always
   datasource:
     url: jdbc:postgresql://localhost:5432/associate
@@ -14,4 +14,10 @@ spring:
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
 
