--- a/associate/src/main/resources/application.yaml
+++ b/associate/src/main/resources/application.yaml
@@ -21,6 +21,13 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
+      consumer:
+        bootstrap-servers: localhost:9092
+        group-id: grouptwo_id
+        auto-offset-reset: earliest
+        key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+        value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+
 eureka:
   client:
     register-with-eureka: true
@@ -30,3 +37,4 @@ eureka:
 
 topic:
   associate-topic: remove_association
+  update-topic: update_party
