--- a/party/src/main/resources/application.yaml
+++ b/party/src/main/resources/application.yaml
@@ -22,6 +22,13 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 
+      consumer:
+        bootstrap-servers: localhost:9092
+        group-id: groupthree_id
+        auto-offset-reset: earliest
+        key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+        value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+
     producer:
       bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
@@ -37,3 +44,4 @@ eureka:
 topic:
   party-topic: remove_association
   update-topic: update_party
+  update-associate: update_associate
